# invaders-ecs

./: CMakeLists.txt  Constants.h  DestroyManager.h  EntityFactory.cpp  EntityFactory.h  Game.cpp  Game.h  InputManager.h  Level.cpp  Level.h  README.md  Tags.h  main.cpp
Components/: Body.h  Bullet.h  Collider.h  Enemy.h  Player.h  PrimitiveShape.h  SceneNode.h  Sprite.h  Transform.h
Events/: CollisionEvent.h
Systems/: BodySystem.h  BulletSystem.h  CollisionSystem.h  DestroySystem.h  EnemySystem.h  PlayerSystem.h  PrimitiveSystem.h  RenderSystem.h
